# eloquence_64

./: .editorconfig  .gitattributes  .gitignore  README.md  SConstruct  buildVars.py  build_upsampler.cmd  fetch_eci.py  host_eloquence32.py  pyproject.toml  upsampler.c
.github/workflows/: build.yml
addon/: installTasks.py
addon/locale/de/LC_MESSAGES/: nvda.po
addon/locale/es/LC_MESSAGES/: nvda.po
addon/locale/fr/LC_MESSAGES/: nvda.po
addon/synthDrivers/: _eloquence.py  _eloquence_updater.py  _ipc.py  _text_preprocessing.py  eloquence.py
