[project]
name = "eloquence-64"
version = "0.0.0"  # Not used — addon version comes from git tags via buildVars.py
description = "Eloquence synthesizer for 64-bit NVDA"
requires-python = ">=3.13"
dependencies = [
    "pyinstaller>=6.17.0",
]

[tool.ruff]
line-length = 110

builtins = [
	"_",  # NVDA injects this at runtime for translations
]

include = [
	"*.py",
	"SConstruct",
]

exclude = [
	".git",
	"__pycache__",
	"build",
	"*.nvda-addon",
	# Vendored stdlib
	"./addon/synthDrivers/eloquence/multiprocessing/*",
	# Git submodule
	"./AltIBMTTSDictionaries/*",
	# SCons build tools (third-party-style)
	"./site_scons/*",
]

[tool.ruff.format]
indent-style = "tab"
line-ending = "lf"

[tool.ruff.lint]
ignore = [
	"W191",  # indentation contains tabs
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"SConstruct" = ["F821"]
# Wildcard import from ctypes is intentional; E402 due to compat shims before imports
"addon/synthDrivers/eloquence.py" = ["E402", "F403", "F405"]
# getLanguage import is a side-effect check for NVDA environment detection
"addon/synthDrivers/_eloquence_updater.py" = ["F401"]
